// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchEntityState scenarios From sampling -> set paging -> loading -> loaded: 1 - initial 1`] = `
Object {
  "connection": undefined,
  "connectionError": undefined,
  "entities": Array [
    OkResult {
      "value": Object {
        "fields": Object {
          "title": "Title 1",
        },
        "id": "1",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-03-19T07:51:25.56Z",
          "name": "Entity 1",
          "type": "TitleOnly",
        },
      },
    },
  ],
  "entitiesScrollToTopSignal": 1,
  "entitySamples": Object {
    "items": Array [
      Object {
        "fields": Object {
          "title": "Title 1",
        },
        "id": "1",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-03-19T07:51:25.56Z",
          "name": "Entity 1",
          "type": "TitleOnly",
        },
      },
    ],
    "seed": 123,
    "totalCount": 1,
  },
  "entitySamplesError": undefined,
  "loadingState": "",
  "paging": undefined,
  "query": Object {},
  "requestedCount": 1,
  "sampling": Object {
    "count": 1,
    "seed": 123,
  },
  "text": "",
  "totalCount": null,
}
`;

exports[`SearchEntityState scenarios From sampling -> set paging -> loading -> loaded: 2 - loading 1`] = `
Object {
  "connection": undefined,
  "connectionError": undefined,
  "entities": Array [
    OkResult {
      "value": Object {
        "fields": Object {
          "title": "Title 1",
        },
        "id": "1",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-03-19T07:51:25.56Z",
          "name": "Entity 1",
          "type": "TitleOnly",
        },
      },
    },
  ],
  "entitiesScrollToTopSignal": 1,
  "entitySamples": undefined,
  "entitySamplesError": undefined,
  "loadingState": "first-page",
  "paging": Object {
    "first": 1,
  },
  "query": Object {},
  "requestedCount": 1,
  "sampling": undefined,
  "text": "",
  "totalCount": null,
}
`;

exports[`SearchEntityState scenarios From sampling -> set paging -> loading -> loaded: 3 - loaded 1`] = `
Object {
  "connection": Object {
    "edges": Array [
      Object {
        "cursor": "cursor-2",
        "node": OkResult {
          "value": Object {
            "fields": Object {
              "title": "Title 2",
            },
            "id": "2",
            "info": Object {
              "authKey": "none",
              "createdAt": "2022-03-19T07:51:25.56Z",
              "name": "Entity 2",
              "type": "TitleOnly",
            },
          },
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "cursor-2",
      "hasNextPage": true,
      "hasPreviousPage": false,
      "startCursor": "cursor-2",
    },
  },
  "connectionError": undefined,
  "entities": Array [
    OkResult {
      "value": Object {
        "fields": Object {
          "title": "Title 2",
        },
        "id": "2",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-03-19T07:51:25.56Z",
          "name": "Entity 2",
          "type": "TitleOnly",
        },
      },
    },
  ],
  "entitiesScrollToTopSignal": 2,
  "entitySamples": undefined,
  "entitySamplesError": undefined,
  "loadingState": "",
  "paging": Object {
    "first": 1,
  },
  "query": Object {},
  "requestedCount": 1,
  "sampling": undefined,
  "text": "",
  "totalCount": 2,
}
`;

exports[`SearchEntityState scenarios From searching -> set sampling -> loading -> loaded: 1 - initial 1`] = `
Object {
  "connection": Object {
    "edges": Array [
      Object {
        "cursor": "cursor-1",
        "node": OkResult {
          "value": Object {
            "fields": Object {
              "title": "Title 1",
            },
            "id": "1",
            "info": Object {
              "authKey": "none",
              "createdAt": "2022-03-19T07:51:25.56Z",
              "name": "Entity 1",
              "type": "TitleOnly",
            },
          },
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "cursor-1",
      "hasNextPage": true,
      "hasPreviousPage": false,
      "startCursor": "cursor-1",
    },
  },
  "connectionError": undefined,
  "entities": Array [
    OkResult {
      "value": Object {
        "fields": Object {
          "title": "Title 1",
        },
        "id": "1",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-03-19T07:51:25.56Z",
          "name": "Entity 1",
          "type": "TitleOnly",
        },
      },
    },
  ],
  "entitiesScrollToTopSignal": 0,
  "entitySamples": undefined,
  "entitySamplesError": undefined,
  "loadingState": "",
  "paging": Object {
    "first": 1,
  },
  "query": Object {
    "order": "name",
  },
  "requestedCount": 1,
  "sampling": undefined,
  "text": "",
  "totalCount": 2,
}
`;

exports[`SearchEntityState scenarios From searching -> set sampling -> loading -> loaded: 2 - loading 1`] = `
Object {
  "connection": undefined,
  "connectionError": undefined,
  "entities": Array [
    OkResult {
      "value": Object {
        "fields": Object {
          "title": "Title 1",
        },
        "id": "1",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-03-19T07:51:25.56Z",
          "name": "Entity 1",
          "type": "TitleOnly",
        },
      },
    },
  ],
  "entitiesScrollToTopSignal": 0,
  "entitySamples": undefined,
  "entitySamplesError": undefined,
  "loadingState": "sample",
  "paging": undefined,
  "query": Object {},
  "requestedCount": 1,
  "sampling": Object {
    "count": 1,
    "seed": 123,
  },
  "text": "",
  "totalCount": null,
}
`;

exports[`SearchEntityState scenarios From searching -> set sampling -> loading -> loaded: 3 - loaded 1`] = `
Object {
  "connection": undefined,
  "connectionError": undefined,
  "entities": Array [
    OkResult {
      "value": Object {
        "fields": Object {
          "title": "Title 2",
        },
        "id": "2",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-03-19T07:51:25.56Z",
          "name": "Entity 2",
          "type": "TitleOnly",
        },
      },
    },
  ],
  "entitiesScrollToTopSignal": 1,
  "entitySamples": Object {
    "items": Array [
      Object {
        "fields": Object {
          "title": "Title 2",
        },
        "id": "2",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-03-19T07:51:25.56Z",
          "name": "Entity 2",
          "type": "TitleOnly",
        },
      },
    ],
    "seed": 123,
    "totalCount": 1,
  },
  "entitySamplesError": undefined,
  "loadingState": "",
  "paging": undefined,
  "query": Object {},
  "requestedCount": 1,
  "sampling": Object {
    "count": 1,
    "seed": 123,
  },
  "text": "",
  "totalCount": null,
}
`;

exports[`SearchEntityState scenarios Next page -> loading -> loaded: 1 - initial 1`] = `
Object {
  "connection": Object {
    "edges": Array [
      Object {
        "cursor": "cursor-1",
        "node": OkResult {
          "value": Object {
            "fields": Object {
              "title": "Title 1",
            },
            "id": "1",
            "info": Object {
              "authKey": "none",
              "createdAt": "2022-03-19T07:51:25.56Z",
              "name": "Entity 1",
              "type": "TitleOnly",
            },
          },
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "cursor-1",
      "hasNextPage": true,
      "hasPreviousPage": false,
      "startCursor": "cursor-1",
    },
  },
  "connectionError": undefined,
  "entities": Array [
    OkResult {
      "value": Object {
        "fields": Object {
          "title": "Title 1",
        },
        "id": "1",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-03-19T07:51:25.56Z",
          "name": "Entity 1",
          "type": "TitleOnly",
        },
      },
    },
  ],
  "entitiesScrollToTopSignal": 0,
  "entitySamples": undefined,
  "entitySamplesError": undefined,
  "loadingState": "",
  "paging": Object {
    "first": 1,
  },
  "query": Object {
    "order": "name",
  },
  "requestedCount": 1,
  "sampling": undefined,
  "text": "",
  "totalCount": 2,
}
`;

exports[`SearchEntityState scenarios Next page -> loading -> loaded: 2 - loading 1`] = `
Object {
  "connection": undefined,
  "connectionError": undefined,
  "entities": Array [
    OkResult {
      "value": Object {
        "fields": Object {
          "title": "Title 1",
        },
        "id": "1",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-03-19T07:51:25.56Z",
          "name": "Entity 1",
          "type": "TitleOnly",
        },
      },
    },
  ],
  "entitiesScrollToTopSignal": 0,
  "entitySamples": undefined,
  "entitySamplesError": undefined,
  "loadingState": "next-page",
  "paging": Object {
    "after": "cursor-1",
  },
  "query": Object {
    "order": "name",
  },
  "requestedCount": 1,
  "sampling": undefined,
  "text": "",
  "totalCount": 2,
}
`;

exports[`SearchEntityState scenarios Next page -> loading -> loaded: 3 - loaded 1`] = `
Object {
  "connection": Object {
    "edges": Array [
      Object {
        "cursor": "cursor-2",
        "node": OkResult {
          "value": Object {
            "fields": Object {
              "title": "Title 2",
            },
            "id": "2",
            "info": Object {
              "authKey": "none",
              "createdAt": "2022-03-19T07:51:25.56Z",
              "name": "Entity 2",
              "type": "TitleOnly",
            },
          },
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "cursor-2",
      "hasNextPage": false,
      "hasPreviousPage": true,
      "startCursor": "cursor-2",
    },
  },
  "connectionError": undefined,
  "entities": Array [
    OkResult {
      "value": Object {
        "fields": Object {
          "title": "Title 2",
        },
        "id": "2",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-03-19T07:51:25.56Z",
          "name": "Entity 2",
          "type": "TitleOnly",
        },
      },
    },
  ],
  "entitiesScrollToTopSignal": 1,
  "entitySamples": undefined,
  "entitySamplesError": undefined,
  "loadingState": "",
  "paging": Object {
    "after": "cursor-1",
  },
  "query": Object {
    "order": "name",
  },
  "requestedCount": 1,
  "sampling": undefined,
  "text": "",
  "totalCount": 2,
}
`;

exports[`SearchEntityState scenarios Refresh: 1 - initial 1`] = `
Object {
  "connection": Object {
    "edges": Array [
      Object {
        "cursor": "cursor-1",
        "node": OkResult {
          "value": Object {
            "fields": Object {
              "title": "Title 1",
            },
            "id": "1",
            "info": Object {
              "authKey": "none",
              "createdAt": "2022-03-19T07:51:25.56Z",
              "name": "Entity 1",
              "type": "TitleOnly",
            },
          },
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "cursor-1",
      "hasNextPage": true,
      "hasPreviousPage": false,
      "startCursor": "cursor-1",
    },
  },
  "connectionError": undefined,
  "entities": Array [
    OkResult {
      "value": Object {
        "fields": Object {
          "title": "Title 1",
        },
        "id": "1",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-03-19T07:51:25.56Z",
          "name": "Entity 1",
          "type": "TitleOnly",
        },
      },
    },
  ],
  "entitiesScrollToTopSignal": 0,
  "entitySamples": undefined,
  "entitySamplesError": undefined,
  "loadingState": "",
  "paging": Object {
    "first": 1,
  },
  "query": Object {
    "order": "name",
  },
  "requestedCount": 1,
  "sampling": undefined,
  "text": "",
  "totalCount": 2,
}
`;

exports[`SearchEntityState scenarios Refresh: 2 - loaded 1`] = `
Object {
  "connection": Object {
    "edges": Array [
      Object {
        "cursor": "cursor-2",
        "node": OkResult {
          "value": Object {
            "fields": Object {
              "title": "Title 2",
            },
            "id": "2",
            "info": Object {
              "authKey": "none",
              "createdAt": "2022-03-19T07:51:25.56Z",
              "name": "Entity 2",
              "type": "TitleOnly",
            },
          },
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "cursor-2",
      "hasNextPage": true,
      "hasPreviousPage": false,
      "startCursor": "cursor-2",
    },
  },
  "connectionError": undefined,
  "entities": Array [
    OkResult {
      "value": Object {
        "fields": Object {
          "title": "Title 2",
        },
        "id": "2",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-03-19T07:51:25.56Z",
          "name": "Entity 2",
          "type": "TitleOnly",
        },
      },
    },
  ],
  "entitiesScrollToTopSignal": 0,
  "entitySamples": undefined,
  "entitySamplesError": undefined,
  "loadingState": "",
  "paging": Object {
    "first": 1,
  },
  "query": Object {
    "order": "name",
  },
  "requestedCount": 1,
  "sampling": undefined,
  "text": "",
  "totalCount": 2,
}
`;

exports[`SearchEntityState scenarios Sampling -> change seed -> loading -> loaded: 1 - initial 1`] = `
Object {
  "connection": undefined,
  "connectionError": undefined,
  "entities": Array [
    OkResult {
      "value": Object {
        "fields": Object {
          "title": "Title 1",
        },
        "id": "1",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-03-19T07:51:25.56Z",
          "name": "Entity 1",
          "type": "TitleOnly",
        },
      },
    },
  ],
  "entitiesScrollToTopSignal": 1,
  "entitySamples": Object {
    "items": Array [
      Object {
        "fields": Object {
          "title": "Title 1",
        },
        "id": "1",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-03-19T07:51:25.56Z",
          "name": "Entity 1",
          "type": "TitleOnly",
        },
      },
    ],
    "seed": 123,
    "totalCount": 2,
  },
  "entitySamplesError": undefined,
  "loadingState": "",
  "paging": undefined,
  "query": Object {},
  "requestedCount": 1,
  "sampling": Object {
    "count": 1,
    "seed": 123,
  },
  "text": "",
  "totalCount": null,
}
`;

exports[`SearchEntityState scenarios Sampling -> change seed -> loading -> loaded: 2 - loading 1`] = `
Object {
  "connection": undefined,
  "connectionError": undefined,
  "entities": Array [
    OkResult {
      "value": Object {
        "fields": Object {
          "title": "Title 1",
        },
        "id": "1",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-03-19T07:51:25.56Z",
          "name": "Entity 1",
          "type": "TitleOnly",
        },
      },
    },
  ],
  "entitiesScrollToTopSignal": 1,
  "entitySamples": undefined,
  "entitySamplesError": undefined,
  "loadingState": "sample",
  "paging": undefined,
  "query": Object {},
  "requestedCount": 1,
  "sampling": Object {
    "count": 1,
    "seed": 456,
  },
  "text": "",
  "totalCount": null,
}
`;

exports[`SearchEntityState scenarios Sampling -> change seed -> loading -> loaded: 3 - loaded 1`] = `
Object {
  "connection": undefined,
  "connectionError": undefined,
  "entities": Array [
    OkResult {
      "value": Object {
        "fields": Object {
          "title": "Title 2",
        },
        "id": "2",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-03-19T07:51:25.56Z",
          "name": "Entity 2",
          "type": "TitleOnly",
        },
      },
    },
  ],
  "entitiesScrollToTopSignal": 2,
  "entitySamples": Object {
    "items": Array [
      Object {
        "fields": Object {
          "title": "Title 2",
        },
        "id": "2",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-03-19T07:51:25.56Z",
          "name": "Entity 2",
          "type": "TitleOnly",
        },
      },
    ],
    "seed": 456,
    "totalCount": 2,
  },
  "entitySamplesError": undefined,
  "loadingState": "",
  "paging": undefined,
  "query": Object {},
  "requestedCount": 1,
  "sampling": Object {
    "count": 1,
    "seed": 456,
  },
  "text": "",
  "totalCount": null,
}
`;
